--- a/styles/contactUs.css
+++ b/styles/contactUs.css
@@ -1,7 +1,9 @@
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
+    display: flex;
+    flex-wrap: column reverse;
+    width: 8%; /* Full width */
     padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
+    border: 1px solid rgb(206, 6, 6); /* Gray border */
     border-radius: 4px; /* Rounded borders */
     box-sizing: border-box; /* Make sure that padding and width stays in place */
     margin-top: 6px; /* Add a top margin */
@@ -11,9 +13,9 @@ input[type=text], select, textarea {
   
   /* Style the submit button with a specific background color etc */
   input[type=submit] {
-    background-color: #04AA6D;
+    background-color: #aa04048a;
     color: rgb(80, 34, 34);
-    padding: 12px 20px;
+    padding: 12px 1px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -21,12 +23,13 @@ input[type=text], select, textarea {
   
   /* When moving the mouse over the submit button, add a darker green color */
   input[type=submit]:hover {
-    background-color: #e05409;
+    background-color: #e054095a;
   }
   
   /* Add a background color and some padding around the form */
   .container {
     border-radius: 5px;
-    background-color: #080707;
+    background-image: url("https://media2.giphy.com/media/26tnndyxLv16sPOcE/200w.webp?cid=ecf05e47o4and1lvn9xst9m8dwjlsc61edydb1ipplhh45lu&rid=200w.webp&ct=g");
+    color: #e80303;
     padding: 20px;
   }
